2009-09-24  Ben Finney  <ben+python@benfinney.id.au>

    Version 1.5 released.

    * Make a separate collection of PIDLockFile test scenarios.

2009-09-23  Ben Finney  <ben+python@benfinney.id.au>

    * Raise specific errors on ‘DaemonRunner’ failures.
    * Distinguish different conditions on reading and parsing PID file.
    * Refactor code to ‘_terminate_daemon_process’ method.
    * Improve explanations in comments and docstrings.
    * Don't set pidfile at all if no path specified to constructor.
    * Write the PID file using correct OS locking and permissions.
    * Close the PID file after writing.
    * Implement ‘PIDLockFile’ as subclass of ‘lockfile.LinkFileLock’.
    * Remove redundant checks for file existence.

2009-09-18  Ben Finney  <ben+python@benfinney.id.au>

    * Manage the excluded file descriptors as a set (not a list).
    * Only inspect the file descriptor of streams if they actually have
      one (via a ‘fileno’ method) when determining which file descriptors
      to close. Thanks to Ask Solem for revealing this bug.

2009-09-17  Ben Finney  <ben+python@benfinney.id.au>

    Version 1.4.8 released.

    * Remove child-exit signal (‘SIGCLD’, ‘SIGCHLD’) from default signal
      map. Thanks to Joel Martin for pinpointing this issue.
    * Document requirement for ensuring any operating-system specific
      signal handlers are considered.
    * Refactor ‘fork_then_exit_parent’ functionality to avoid duplicate
      code.
    * Remove redundant imports.
    * Remove unused code from unit test suite scaffold.
    * Add specific license terms for unit test suite scaffold.

2009-09-03  Ben Finney  <ben+python@benfinney.id.au>

    Version 1.4.7 released.

2009-09-02  Ben Finney  <ben+python@benfinney.id.au>

    * Fix keywords argument for distribution setup.
    * Exclude ‘test’ package from distribution installation.

2009-06-21  Ben Finney  <ben+python@benfinney.id.au>

    Version 1.4.6 released.
